some more info added
